#разметка без стилей

--- a/src/blocks/content/content.css
+++ b/src/blocks/content/content.css
@@ -1,5 +1,58 @@
 .content {
   width: 100%;
-  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.form{
+  width: 600px;
+  margin: 0 auto;
+}
+
+.search-link {
+  width: 100%;
+  margin-top: 20px;
+}
+
+.input {
+  width: 400px;
   border: 1px solid black;
+}
+
+.menu {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+
+.tab-control {
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.ttt{
+  width: 600px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.tab-item {
+  color: black;
+  width: 100px;
+  text-align: center;
+  border-bottom: 2px solid cornflowerblue;
+}
+
+.animation-images {
+  margin: 0 auto;
+  width: 600px;
+  border: 1px solid black;
+  height: 400px;
+  background-color: cornflowerblue;
+  margin-top: 20px;
+  opacity: 0.2;
 }
