--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -5,6 +5,7 @@
   color: #FFFFFF;
   min-width: 320px;
   max-width: 1280px;
+  background-color: #2a2c2f;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
