--- a/src/blocks/animation-images/animation-images.css
+++ b/src/blocks/animation-images/animation-images.css
@@ -1,8 +1,5 @@
 .animation-images {
   width: 100%;
-  border: 1px solid black;
-  height: 400px;
-  background-color: cornflowerblue;
   margin: 20px auto 0;
-  opacity: 0.2;
+  padding-bottom: 80px;
 }
