--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -13,8 +13,8 @@
 @import url(../blocks/tab-item/__text/tab-item__text.css);
 @import url(../blocks/tab-item/__img/tab-item__img.css);
 @import url(../blocks/search-link/search-link.css);
-@import url(../blocks/form/form.css);
-@import url(../blocks/form/__input/form__input.css);
+@import url(../blocks/search/search.css);
+@import url(../blocks/search/__input/search__input.css);
 @import url(../blocks/animation-images/animation-images.css);
 @import url(../blocks/animation-images/__list/animation-images__list.css);
 @import url(../blocks/btn/btn.css);
