--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -20,3 +20,6 @@
 @import url(../blocks/btn/btn.css);
 @import url(../blocks/animation-images/__item/animation-images__item.css);
 @import url(../blocks/gif/gif.css);
+@import url(../blocks/search/__reset/search__reset.css);
+@import url(../blocks/search/__reset/_enabled/search__reset_enabled.css);
+
