--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -15,6 +15,8 @@
 @import url(../blocks/search-link/search-link.css);
 @import url(../blocks/search/search.css);
 @import url(../blocks/search/__input/search__input.css);
+@import url(../blocks/form/form.css);
+@import url(../blocks/form/__input/form__input.css);
 @import url(../blocks/animation-images/animation-images.css);
 @import url(../blocks/animation-images/__list/animation-images__list.css);
 @import url(../blocks/btn/btn.css);
@@ -23,3 +25,5 @@
 @import url(../blocks/search/__reset/search__reset.css);
 @import url(../blocks/search/__reset/_enabled/search__reset_enabled.css);
 
+@import url(../blocks/tab-item/_selected/tab-item_selected.css);
+@import url(../blocks/search-link/_opened/search-link_opened.css);
