--- a/src/blocks/container/container.css
+++ b/src/blocks/container/container.css
@@ -3,3 +3,19 @@
   display: flex;
   margin: 0 auto;
 }
+
+
+
+.btn__search {
+  height: 40px;
+  width: 40px;
+  overflow: hidden;
+}
+
+
+.search__box {
+  background-color: white;
+  height: 40px;
+  /*width: 40px;*/
+  overflow: hidden
+}
