--- a/src/blocks/search/__input/search__input.css
+++ b/src/blocks/search/__input/search__input.css
@@ -1,6 +1,18 @@
 .search__input {
-  width: 600px;
+  /*width: 600px;*/
   /*border-radius: 20px;*/
   height: 40px;
   border: 1px solid black;
+
+
+  /*aa*/
+  width: 0;
+  opacity: 0;
+  border-radius: 15px;
+  border: none;
+  margin-left: 0 ;
+  transition: all 35ms ease-in-out;
+  /*padding-left: 10px;*/
+  outline: none;
+
 }
