feat: Добавить кнопку тренды

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -15,8 +15,8 @@
 @import url(../blocks/search-link/search-link.css);
 @import url(../blocks/search/search.css);
 @import url(../blocks/search/__input/search__input.css);
-@import url(../blocks/form/form.css);
-@import url(../blocks/form/__input/form__input.css);
+/*@import url(../blocks/form/form.css);
+@import url(../blocks/form/__input/form__input.css);*/
 @import url(../blocks/animation-images/animation-images.css);
 @import url(../blocks/animation-images/__list/animation-images__list.css);
 @import url(../blocks/btn/btn.css);
@@ -27,3 +27,5 @@
 
 @import url(../blocks/tab-item/_selected/tab-item_selected.css);
 @import url(../blocks/search-link/_opened/search-link_opened.css);
+@import url(../blocks/tab/tab.css);
+@import url(../blocks/tab/_enabled/tab_enabled.css);
