--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -29,3 +29,10 @@
 @import url(../blocks/search-link/_opened/search-link_opened.css);
 @import url(../blocks/tab/tab.css);
 @import url(../blocks/tab/_enabled/tab_enabled.css);
+
+
+@import url(../blocks/btn/__image/btn__image.css);
+@import url(../blocks/search/__input/_hover/search__input_hover.css);
+
+@import url(../blocks/field-constant/field-constant.css);
+@import url(../blocks/field-constant/_hover/field-constant_hover.css);
