--- a/src/blocks/search/__input/search__input.css
+++ b/src/blocks/search/__input/search__input.css
@@ -3,7 +3,7 @@
   width: 0;
   opacity: 0;
   border-radius: 15px;
-  border: 1px solid green;
+  border: none;
   margin-left: 0 ;
   transition: all 35ms ease-in-out;
   outline: none;
